--- a/10주차/김윤경.md
+++ b/10주차/김윤경.md
@@ -28,6 +28,42 @@
 
 ### 데코레이터 패턴
 
+- 데코레이터 패턴은 타깃에 부가적인 기능을 런타임 시 다이내믹하게 부여해주기 위해 프록시를 사용하는 패턴이다.
+- 다이내믹하게 기능을 부여한다는 의미는 컴파일 시점, 즉 코드상에서는 어떤 방법과 순서로 프록시와 타깃이 연결되어 사용되는지 정해져 있지 않다는 뜻이다.
+- 프록시로서 동작하는 각 데코레이터는 위임하는 대상에도 인터페이스로 접근하기 때문에(인터페이스가 프록시와 타깃을 구분 없이 교체 가능하게 만들어, 기능을 끼워 넣을 수 있는 설계 지점을 제공하기 때문에 인터페이스로 접근) 자신이 최종 타깃으로 위임하는지, 아니면 다음 단계의 데코레이터 프록시로 위임하는지 알지 못한다.
+<br> 그래서 데코레이터의 다음 위임 대상은 인터페이스로 선언하고 생성자나 수정자 메소드를 통해 위임 대상을 외부에서 런타임 시에 주입 받을 수 있도록 만들어야 한다.
+
+
+- UserServiceImpl(진짜 로직)에 UserServiceTx(트랜잭션 담당)를 덮어씌워서, 클라이언트는 트랜잭션이 적용된 서비스만 보게 했다
+
+- UserServiceImpl : 타깃, 진짜 비즈니스 로직 있음, “회원 등급 변경”, “유저 처리” 이런 코드
+<br> -> 트랜잭션 모름
+
+- UserServiceTx : 데코레이터, 트랜잭션 시작/커밋/롤백 담당, 내부에 UserService를 하나 들고 있음
+<br> -> 기능은 위임하고, 앞뒤로 트랜잭션만 붙임
+
+<img width="1299" height="428" alt="image" src="https://github.com/user-attachments/assets/0728d94d-ac3c-49e3-b628-eaf0d99cf5b3" />
+
+- userService라는 이름의 빈은 UserServiceTx의 객체.
+<br> 그 안에 트랜잭션 매니저도 넣어주고, userServiceImpl이라는 진짜 서비스도 넣어준다.
+<br> UserServiceTx가 UserServiceImpl을 감싸도록 설정한 것
+
+"DI를 통한 다이나믹한 구성" ? : 코드를 바꾸지 않고 설정만으로 누가 누구를 감쌀지 결정했다-라는 뜻. 
+
+- 데코레이터 패턴은 인터페이스를 통해 위임하는 방식이기 때문에 어느 데코레이터에서 타깃으로 연결될지 코드 레벨에선 미리 알 수 없다. (항상 타입이 UserService userService; 이거니깐)
+- 여러 개의 데코레이터를 적용 할 수도, 필요하면 다른 데코레이터를 중간에 끼워 넣을 수도 있다.
+- 그래서 데코레이터 패턴은 타깃의 코드를 손대지 않고, 클라이언트가 호출하는 방법도 변경하지 않은 채로 새로운 기능을 추가할 때 유용한 방법이다.
+
+### 프록시 패턴
+
+- 프록시 : 클라이언트와 사용 대상 사이에 대리 역할을 맡은 오브젝틀르 두는 방법.
+- 프록시 패턴 : 디자인패턴의 생성, 구현, 행위 패턴 중에서 구현 패턴 중 하나. 프록시를 사용하는 방법 중에서 타깃에 대한 접근 방법을 제어하려는 목적을 가진 경우.
+<br> 프록시 패턴의 프록시는 타깃의 기능을 확장하거나 추가하지 않는다. 대신 클라이언트가 타깃에 접근하는 방식을 변경해준다. 클라이언트에게 타깃에 대한 레퍼런스를 넘겨야 하는데, 실제 타깃 오브젝트를 만드는 대신 프록시를 넘겨준다. <br> 프록시의 메소드를 통해 타깃을 사용하려고 시도하면, 그대 프록시가 타깃 오브젝트를 생성하고 요청을 위임해주는 식이다. <br> 만약 레퍼런스는 갖고 있지만 끝까지 사용하지 않거나 많은 작업이 진행된 후에 사용죄는 경우라면 이렇게 프록시를 통해 생성을 최대한 늦춤으로써 얻는 장점이 많다. <br> -> 
+
+
+
+
+
 
 
 
