--- a/10주차/김윤경.md
+++ b/10주차/김윤경.md
@@ -58,7 +58,10 @@
 
 - 프록시 : 클라이언트와 사용 대상 사이에 대리 역할을 맡은 오브젝틀르 두는 방법.
 - 프록시 패턴 : 디자인패턴의 생성, 구현, 행위 패턴 중에서 구현 패턴 중 하나. 프록시를 사용하는 방법 중에서 타깃에 대한 접근 방법을 제어하려는 목적을 가진 경우.
-<br> 프록시 패턴의 프록시는 타깃의 기능을 확장하거나 추가하지 않는다. 대신 클라이언트가 타깃에 접근하는 방식을 변경해준다. 클라이언트에게 타깃에 대한 레퍼런스를 넘겨야 하는데, 실제 타깃 오브젝트를 만드는 대신 프록시를 넘겨준다. <br> 프록시의 메소드를 통해 타깃을 사용하려고 시도하면, 그대 프록시가 타깃 오브젝트를 생성하고 요청을 위임해주는 식이다. <br> 만약 레퍼런스는 갖고 있지만 끝까지 사용하지 않거나 많은 작업이 진행된 후에 사용죄는 경우라면 이렇게 프록시를 통해 생성을 최대한 늦춤으로써 얻는 장점이 많다. <br> -> 
+<br> 프록시 패턴의 프록시는 타깃의 기능을 확장하거나 추가하지 않는다. 대신 클라이언트가 타깃에 접근하는 방식을 변경해준다. 클라이언트에게 타깃에 대한 레퍼런스를 넘겨야 하는데, 실제 타깃 오브젝트를 만드는 대신 프록시를 넘겨준다. <br> 프록시의 메소드를 통해 타깃을 사용하려고 시도하면, 그대 프록시가 타깃 오브젝트를 생성하고 요청을 위임해주는 식이다. <br> 만약 레퍼런스는 갖고 있지만 끝까지 사용하지 않거나 많은 작업이 진행된 후에 사용죄는 경우라면 이렇게 프록시를 통해 생성을 최대한 늦춤으로써 얻는 장점이 많다. <br> -> 객체가 비쌀 때가 많다. DB나 네트워크를 연결하거나, 대용량 데이터를 로딩할때. -> 프록시를 쓰면 처음에는 가벼운 프록시만 생성하고 진짜 쓸 때만 타깃을 생성하니까 객체를 안 쓰면 끝까지 안 만들어진다.
+<br> -> 서버 부팅을 하거나 화면에 진입할때 프록시 없으면 시작하자마자 모든 객체를 생성한다. 하지만 프록시가 있으면 역시나 필요할때만 생성하기 때문에 애플리케이션 시작 할때 빠르다.
+<br> -> 메모리를 덜 쓴다.
+<br> -> 클라이언트는 타깃을 쓰는 것 처럼 사용하기 때문에 코드 변경이나 조건문이 추가 되는 경우가 없다. 프록시가 뒤에서 다 처리 ㅐ준다. 결국 코드 구조는 그대로 유지된다. 결국 가짜를 먼저 주고, 진짜로 쓰는 순간에 만드는, 생성을 최대한 늦추니까 성능은 올라가고 메모리는 적게씀으로써 불필요한 생성을 방지한다.
 
 
 
