--- a/10주차/김윤경.md
+++ b/10주차/김윤경.md
@@ -244,27 +244,127 @@ public Object invoke(Object proxy, Method method, Object[] args)
 
 <img width="636" height="314" alt="image" src="https://github.com/user-attachments/assets/2151811f-d08a-4374-aace-93e0318d583a" />
 
-- UserServiceTx 오브젝트 대신 TransactionHandler를 만들고 타깃 오브젝트와 트랜잭션 매니저, 메소드 패턴을 주입해준다. 
+- UserServiceTx 오브젝트 대신 TransactionHandler를 만들고 타깃 오브젝트와 트랜잭션 매니저, 메소드 패턴을 주입해준다.
+
+### 6.3.4 다이내믹 프록시를 위한 팩토리 빈
+
+- DI의 대상이 되는 다이내믹 프록시 오브젝트는 일반적인 스프링의 빈으로는 등록할 방법이 없다.
+<br> 스프링 빈은 기본적으로 클래스 이름과 프로퍼티로 정의된다.
+<br> 스프링은 지정된 클래스 이름을 가지고 리플렉션을 이용해서 해당 클래스의 오브젝트를 만든다.
+<br> 클래스의 이름을 갖고 있다면 다음과 같은 방법으로 새로운 오브젝트를 생성할 수 있다.
+
+<img width="470" height="47" alt="image" src="https://github.com/user-attachments/assets/901c9e13-1caa-4e9c-b5d1-bc33484edb86" />
+
+- Class의 newInstance() 메소드는 해당 클래스의 파라미터가 없는 생성자를 호추하고, 그 결과 생성되는 오브젝트를 돌려주는 리플렉션 API이다.
+<br> 스프링은 내부적으로 리플렉션 API를 이용해서 빈 정의에 나오는 클래스 이름을 가지고 빈 오브젝트를 생성한다
+<br> 클래스 자체도 내부적으로 다이내믹하게 새로 정의해서 사용하기 때문에 다이내믹 프록시 오브젝트의 클래스가 어떤 것인지 알수도 없다. 결국 다이내믹 프록시는 Proxy 클래스의 newProxyInstance()라는 스태틱 팩토리 메소드를 통해서만 만들 수 있다.
+
+### 랙토리 빈
+- 스프링은 기본적으로 클래스와 기본 생성자로 빈을 만든다.
+- 그런데 생성자가 private이거나 정적 팩토리 메서드로만 객체를 만들어야 하는 클래스도 있다.
+<br> 이런 객체는 그 자체를 빈으로 등록할 수 없기 때문에, 객체를 대신 만들어주는 빈인 FactoryBean을 사용한다.
+
+<img width="611" height="230" alt="image" src="https://github.com/user-attachments/assets/6ce387cf-22de-4998-a2f8-6dfed6535eaf" />
+
+- FactoryBean<T>을 구현한 클래스는 스프링이 관리하는 빈이지만 실제로 주입되는 객체는 getObject()가 반환한 객체다.
+
+- 팩토리 빈
+  <br> : 스프링 대신 객체를 만들어주는 전용 빈
+- 일반 빈은 스프링이 직접 new 생성자()로 만든다면 팩토리 빈은 스프링이 팩토리 빈을 만들고, 그 팩토리 빈이 진짜 사용할 객체를 만들어 준다
+
+<img width="650" height="403" alt="image" src="https://github.com/user-attachments/assets/3fb2ade3-f3b4-4481-aa0d-776743840e37" />
+
+- Message 클래스의 오브젝트를 만들려면 neMessage()라는 스태틱 메소드를 사용해야 한다. 그래서 이 클래스는 그냥 스프링 빈으로 등록할 수 없다.
+
+- 그래서 필요한 게 팩토리 빈이다.
+
+<img width="509" height="387" alt="image" src="https://github.com/user-attachments/assets/1a940a09-62c9-496c-99ca-91307e766a20" />
+
+- 팩퇴 빈은 전형적인 팩토리 메소드를 가진 오브젝트이다.
+<br> 스프링은 FactoryBean 인터페이스를 구현한 클래스가 빈의 클래스로 지정되면 팩토리 빈 클래스의 오브젝트의 getObject() 메소드를 이용해 오브젝트를 가져오고 이를 빈 오브젝트로 사용한다 빈의 클래스로 등록된 패고리 빈은 빈 오브젝트를 생성하는 과정에서만 사용될 뿐이다.
 
 
+### 팩토리 빈의 설정 방법
+
+- FactoryBean을 구현한 클래스를 스프링 빈으로 등록하면 그 클래스 자체가 빈이 되는 게 아니라 getObject()가 만들어준 객체가 '진짜 빈'이 된다
+- 그래서
+<br> context.getBean("message") -> Message 객체
+<br> context.getBean("&message") -> MessageFactoryBean 객체
+
+- 즉 FactoryBean은 객체 생성 로직이 복잡하거나, 생성자를 직접 쓰면 안 되는 객체를 스프링 빈으로 만들기 위한 장치
 
 
+<img width="517" height="285" alt="image" src="https://github.com/user-attachments/assets/766de084-58d7-4b99-94c9-4bcde1efe864" />
+
+- 왜 @Autowired 대신 getBean()을 썼을까?
+<br> -> 지금은 학습 테스트이기도 하고 message 빈의 타입이 설정만 보고 바로 보이지 않는다. 
 
 
+### 다이내믹 프록시를 만들어주는 팩토리 빈
+
+<img width="567" height="198" alt="image" src="https://github.com/user-attachments/assets/0ac32a9e-e303-4320-ac76-af7c180d2a38" />
 
 
+- 예제의 흐름을 보면
+스프링 시작 -> 스프링이 팩토리 빈 생성  -> 팩토리 빈에 프로퍼티 주입 -> 스프링이 factoryBean.getObject() 호출 -> getObject() 안에서
+```
+Proxy.newProxyInstance(...)
+```
+
+실행
+
+<br> 다이내믹 프록시 생성 -> 이 프록시가 UserService 빈으로 등록됨
+
+<br> 클라이언트는
+```
+@Autowired UserService userService;
+```
+
+로 프록시를 받음
 
 
+### 트랜잭션 프록시 팩토리 빈
+
+<img width="657" height="239" alt="image" src="https://github.com/user-attachments/assets/9cdb8c28-454b-40d7-957c-2878670741e9" />
+
+- target, transactionManager 프로퍼티는 다른 빈을 가리키는 것이니 ref 애트리뷰트로 설정했고, pattern은 스트링으로 된 문자열이니 value 애트리뷰트를 사용해 값을 지정했다.
+<br> 그런데 serviceInterface는 숫자, 문자와 같은 단순한 타입이 아니라 Class 타입이다. 이것은 어떻게 설정해야 할까?
+<br> Class 타입은 value를 이용해 클래스 또는 인터페이스의 이름을 넣어주면 된다. 스프링은 수정자 메소드의 파라미터의 타입을 확인해서 프로퍼티의 타입이 Class인 경우는 value로 설정한 이름을 가진 Class 오브젝트로 자동 변환해준다.
+
+### 트랜잭션 프록시 팩토리 빈 테스트
+
+- 기존 UserServiceTx 같은 프록시 클래스를 쓰지 않고, 스프링 빈으로 등록된 팩토리 빈을 직접 가져와 타깃을 교체한 뒤 프록시를 다시 생성해서 트랜잭션 롤백이 제대로 일어나는지 검증해본다.
+- 이 방식을 사용하게되면
+<br> UserServiceTx 같은 프록시 클래스 제거 할 수 있고 트랜잭션 로직 재사용 할 수 있다. 
+<br> 또한 어떤 서비스든 패턴만 맞으면 트랜잭션 적용 가능
+
+### 6.3.5 프록시 팩토리 빈 방식의 장점과 한계
+
+### 프록시 팩토리 빈의 재사용
 
 
+<img width="525" height="585" alt="image" src="https://github.com/user-attachments/assets/b2fcdf1d-a2f9-43be-a947-bf0fd665c80c" />
+
+- 예제는 순서대로
+<br> 트랜잭션이 없는 기존 서비스 빈
+<br> 타깃 빈으로 이름을 변경
+<br> 프록시 팩토리 빈으로 등록
+- 이 방식의 장점은 프록시 클래스를 추가할 필요가 없고 서비스 코드를 수정할 필요가 없다는 것이다.
+<br> 설정만으로 기능을 추가 할 수 있다. 
 
 
+### 프록시 팩토리 빈 방식의 장점
+- 프록시 클래스 직접 만들 필요가 없다
+- 부가기능 코드 중복 제거
+- DI + 설정만으로 기능 적용 가능
+- 다양한 타깃에 재사용 가능
 
 
-
-
-
-
+### 프록시 팩토리 빈의 한계
+- 설정(XML)이 기하급수적으로 늘어난다
+- 가기능이 늘어날수록 설정이 폭발
+- TransactionHandler 중복 문제 (타깃이 다르면 새로운 Handler가 필요하다)
+- 클래스 단위 공통 적용이 어렵다
 
 
 
